// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchStatsPage limitHit 1`] = `
<DocumentFragment>
  <div
    class="search-stats-page container mt-4"
  >
    <header
      class="d-flex align-items-center justify-content-between mb-3"
    >
      <h2
        class="h2 d-flex align-items-center mb-0"
      >
        <svg
          class="mdi-icon iconInline mr-2"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M16,11.78L20.24,4.45L21.97,5.45L16.74,14.5L10.23,10.75L5.46,19H22V21H2V3H4V17.54L9.5,8L16,11.78Z"
          />
        </svg>
         Code statistics 
        <small
          class="text-uppercase ml-2"
        >
          Experimental
        </small>
      </h2>
    </header>
    <form
      class="form"
    >
      <div
        class="form-group d-flex align-items-stretch"
      >
        <input
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="form-control flex-1 test-stats-query"
          id="stats-page__query"
          placeholder="Enter a Sourcegraph search query"
          spellcheck="false"
          type="search"
          value="abc"
        />
      </div>
    </form>
    <hr
      class="my-3"
    />
    <div
      aria-live="assertive"
      class=""
      role="alert"
    >
      Limit hit. Add 
      <code>
        count:5000
      </code>
       (or an even larger number) to your query to retry with a higher limit.
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchStatsPage renders 1`] = `
<DocumentFragment>
  <div
    class="search-stats-page container mt-4"
  >
    <header
      class="d-flex align-items-center justify-content-between mb-3"
    >
      <h2
        class="h2 d-flex align-items-center mb-0"
      >
        <svg
          class="mdi-icon iconInline mr-2"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M16,11.78L20.24,4.45L21.97,5.45L16.74,14.5L10.23,10.75L5.46,19H22V21H2V3H4V17.54L9.5,8L16,11.78Z"
          />
        </svg>
         Code statistics 
        <small
          class="text-uppercase ml-2"
        >
          Experimental
        </small>
      </h2>
    </header>
    <form
      class="form"
    >
      <div
        class="form-group d-flex align-items-stretch"
      >
        <input
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="form-control flex-1 test-stats-query"
          id="stats-page__query"
          placeholder="Enter a Sourcegraph search query"
          spellcheck="false"
          type="search"
          value="abc"
        />
      </div>
    </form>
    <hr
      class="my-3"
    />
    <div
      class="mb-3"
    >
      <h4
        class="cardHeader"
      >
        Languages
      </h4>
      <div
        class="d-flex"
      >
        <div
          class="flex-0 border-right"
        >
          <table
            class="search-stats-page__table table mb-0 border-top-0"
          >
            <thead>
              <tr
                class="small"
              >
                <th
                  class="border-top-0"
                >
                  <span
                    class="sr-only"
                  >
                    Language
                  </span>
                </th>
                <th
                  class="border-top-0"
                >
                  Lines
                </th>
                <th
                  class="border-top-0"
                >
                  <span
                    class="sr-only"
                  >
                    Percent
                  </span>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  <a
                    class=""
                    href="/search?q=abc+lang:a&patternType=literal"
                  >
                    A
                  </a>
                </td>
                <td>
                  100
                </td>
                <td>
                  50%
                </td>
              </tr>
              <tr>
                <td>
                  <a
                    class=""
                    href="/search?q=abc+lang:b&patternType=literal"
                  >
                    B
                  </a>
                </td>
                <td>
                  50
                </td>
                <td>
                  25%
                </td>
              </tr>
              <tr>
                <td>
                  <a
                    class=""
                    href="/search?q=abc+lang:c&patternType=literal"
                  >
                    C
                  </a>
                </td>
                <td>
                  10
                </td>
                <td>
                  5%
                </td>
              </tr>
              <tr>
                <td>
                  <a
                    class=""
                    href="/search?q=abc+lang:d&patternType=literal"
                  >
                    D
                  </a>
                </td>
                <td>
                  5
                </td>
                <td>
                  3%
                </td>
              </tr>
              <tr>
                <td>
                  Unknown
                </td>
                <td>
                  35
                </td>
                <td>
                  18%
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="flex-1 mx-4"
        >
          <div
            class="recharts-responsive-container"
            style="width: 100%; height: 600px;"
          >
            <div
              style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
